--- a/src/Processor.Api/appsettings.Development.json
+++ b/src/Processor.Api/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
     "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+      "LogLevel": {
+        "Default": "Debug",
+        "Microsoft.AspNetCore": "Debug"
+      }
     },
     "AuthSettings": {
         "Secret": "This is a secret for signing the token",
