--- a/deploy/k8s/processor/base/processor-api-ingress.yaml
+++ b/deploy/k8s/processor/base/processor-api-ingress.yaml
@@ -6,11 +6,12 @@ metadata:
   annotations: 
       kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/use-regex: 'true'
+      nginx.org/mergeable-ingress-type: "minion"
   labels:
     name: processor-ingress
 spec:
   rules:
-  - host: processor.k8
+  - host: evolution.k8
     http:
       paths:
       - path: /process
