--- a/deploy/k8s/processor/base/processor-api-ingress.yaml
+++ b/deploy/k8s/processor/base/processor-api-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: processor-ingress
   namespace: evolution
   annotations: 
-      kubernetes.io/ingress.class: nginx
+      # kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/use-regex: 'true'
       nginx.org/mergeable-ingress-type: "minion"
   labels:
