--- a/src/Processor.Api/appsettings.Development.json
+++ b/src/Processor.Api/appsettings.Development.json
@@ -1,28 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug"
-    }
-  },
-  "AuthSettings": {
-    "Secret": "This is a secret for signing the token",
-    "Issuer": "identityservice",
-    "Audience": "evolution",
-    "ValidDuration": 30000
-  },
-  "ConnectionStrings": {
-    "IdentityDB": "Server=localhost,1433;Initial Catalog=identitydb;User Id=sa;Password=password@1"
-  },
-  "StorageSettings": {
-    "BucketName": "evolution-video-uploads",
-    "BucketFolder": "files",
-    "MaxFileSize": 2457245747
-  },
-  "AWS": {
-    "Profile": "dev_admin_developer_cache",
-    "Region": "ap-south-1"
-  },
-  "SupportEmail": "TechSupport@example.com"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "Microsoft.AspNetCore": "Information"
+        }
+    },
+    "AuthSettings": {
+        "Secret": "This is a secret for signing the token",
+        "Issuer": "identityservice",
+        "Audience": "evolution",
+        "ValidDuration": 30000
+    },
+    "ConnectionStrings": {
+        "IdentityDB": "Server=localhost,1433;Initial Catalog=identitydb;User Id=sa;Password=password@1"
+    },
+    "StorageSettings": {
+        "BucketName": "evolution-video-uploads",
+        "BucketFolder": "files",
+        "MaxFileSize": 2457245747
+    },
+    "AWS": {
+        "Profile": "dev_admin_developer_cache",
+        "Region": "ap-south-1"
+    },
+    "SupportEmail": "TechSupport@example.com"
 
 }
