--- a/src/Processor.Api/Processor.Api.csproj
+++ b/src/Processor.Api/Processor.Api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
 		<PackageReference Include="AWSSDK.S3" Version="3.7.100" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.10" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.9.0" />
