--- a/deploy/k8s/processor/base/processor-api-deployment.yaml
+++ b/deploy/k8s/processor/base/processor-api-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: processor-api
-        image: rohitrustagi007/evo_processor:latest
+        image: rohitrustagi007/evo_processor:47
         env: 
           - name: ASPNETCORE_ENVIRONMENT
             value: "Production" 
