Open Telemetry Metric + tracing

--- a/src/Processor.Api/appsettings.Development.json
+++ b/src/Processor.Api/appsettings.Development.json
@@ -5,6 +5,26 @@
             "Microsoft.AspNetCore": "Information"
         }
     },
+    "ServiceName": "processor-api",
+    "AllowedHosts": "*",
+    "UseTracingExporter": "zipkin",
+    "UseMetricsExporter": "prometheus",
+    "UseLogExporter": "console",
+    "Jaeger": {
+        "AgentHost": "localhost",
+        "AgentPort": 6831,
+        "Endpoint": "http://localhost:14268",
+        "Protocol": "UdpCompactThrift"
+    },
+    "Zipkin": {
+        "Endpoint": "http://localhost:9411/api/v2/spans"
+    },
+    "Otlp": {
+        "Endpoint": "http://localhost:4317"
+    },
+    "AspNetCoreInstrumentation": {
+        "RecordException": "true"
+    },
     "AuthSettings": {
         "Secret": "This is a secret for signing the token",
         "Issuer": "identityservice",
