--- a/src/Processor.Api/Processor.Api.csproj
+++ b/src/Processor.Api/Processor.Api.csproj
@@ -19,10 +19,16 @@
 		<PackageReference Include="Dapr.Extensions.Configuration" Version="1.9.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
 		<PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
-		<PackageReference Include="App.Metrics.AspNetCore" Version="4.3.0" />
-		<PackageReference Include="App.Metrics.AspNetCore.Endpoints" Version="4.3.0" />
-		<PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="4.3.0" />
-		<PackageReference Include="App.Metrics.Formatters.Prometheus" Version="4.3.0" />
+		<PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.2" />
+		<PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.3.2" />
+		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.4.0-rc.4" />
+		<PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.3.2" />
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.4.0-rc.4" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.13" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.13" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.0.0" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc9.13" />
+		<PackageReference Include="System.Diagnostics.DiagnosticSource" Version="7.0.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.24.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
