corret metrics endpoint

--- a/deploy/k8s/processor/base/service-monitor.yaml
+++ b/deploy/k8s/processor/base/service-monitor.yaml
@@ -7,7 +7,7 @@ spec:
   endpoints:
   - interval: 30s
     port: processor-api-port
-    path: /metrics-text
+    path: /metrics
   selector:
     matchLabels:
       app: processor-api
