--- a/src/Processor.Api/appsettings.Development.json
+++ b/src/Processor.Api/appsettings.Development.json
@@ -5,6 +5,9 @@
             "Microsoft.AspNetCore": "Information"
         }
     },
+    "Services": {
+        "Uploader": "http://localhost:2000"
+    },
     "ServiceName": "processor-api",
     "AllowedHosts": "*",
     "UseTracingExporter": "zipkin",
