--- a/src/Processor.Api/appsettings.Production.json
+++ b/src/Processor.Api/appsettings.Production.json
@@ -5,6 +5,9 @@
             "Microsoft.AspNetCore": "Debug"
         }
     },
+    "Services": {
+        "Uploader": "http://uploader-api-cluster-ip:80"
+    },
     "AuthSettings": {
         "Secret": "This is a secret for signing the token",
         "Issuer": "identityservice",
