--- a/src/Processor.Api/appsettings.Production.json
+++ b/src/Processor.Api/appsettings.Production.json
@@ -16,7 +16,7 @@
     "Jaeger": {
         "AgentHost": "localhost",
         "AgentPort": 6831,
-        "Endpoint": "http://jaeger.telemetry:14268",
+        "Endpoint": "http://jaeger.flux-system:14268",
         "Protocol": "UdpCompactThrift"
     },
     "Zipkin": {
