--- a/deploy/k8s/processor/overlays/dev/deployment_patch.yaml
+++ b/deploy/k8s/processor/overlays/dev/deployment_patch.yaml
@@ -19,6 +19,7 @@ spec:
     spec:
       containers:
         - name: processor-api
+          image: rohitrustagi007/evo_processor:0.1.0
           env: 
           - name: ASPNETCORE_ENVIRONMENT
             value: "Development"
