--- a/src/Processor.Api/appsettings.Production.json
+++ b/src/Processor.Api/appsettings.Production.json
@@ -20,7 +20,7 @@
         "Protocol": "UdpCompactThrift"
     },
     "Zipkin": {
-        "Endpoint": "http://zipkin.flux-system:9411/api/v2/spans"
+        "Endpoint": "http://zipkin.flux-system/api/v2/spans"
     },
     "Otlp": {
         "Endpoint": "http://localhost:4317"
