--- a/deploy/k8s/processor/base/deployment.yaml
+++ b/deploy/k8s/processor/base/deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: processor-api-deployment
-  namespace: evolution
+  name: processor-api
+  namespace: processor
 spec:
   replicas: 1
   selector:
