--- a/deploy/k8s/processor/base/kustomization.yaml
+++ b/deploy/k8s/processor/base/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - processor-api-deployment.yaml
-  - processor-api-service.yaml
-  #- processor-api-ingress.yaml
+  - namespace.yaml
+  - secrets.yaml
+  - deployment.yaml
+  - service.yaml
+  - ingress.yaml
 
