--- a/deploy/k8s/processor/base/service.yaml
+++ b/deploy/k8s/processor/base/service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: processor-api-cluster-ip
-  namespace: evolution
+  name: processor-api
+  namespace: processor
   labels:
     app: processor-api
 spec:
