--- a/deploy/k8s/processor/overlays/dev/deployment_patch.yaml
+++ b/deploy/k8s/processor/overlays/dev/deployment_patch.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: processor-api
-  namespace: evolution
+  namespace: processor
 spec:
   selector:
     matchLabels:
