Reafactor for Promtheus

--- a/deploy/k8s/processor/base/service-monitor.yaml
+++ b/deploy/k8s/processor/base/service-monitor.yaml
@@ -3,7 +3,7 @@ kind: ServiceMonitor
 metadata:
   labels:
   name: processor-api
-  namespace: processor
+  namespace: monitoring
 spec:
   endpoints:
   - interval: 30s
