--- a/deploy/k8s/processor/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/processor/overlays/dev/kustomization.yaml
@@ -1,5 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+commonLabels:
+  app: processor-api
+  metrics-scraper: 'prom'
+commonAnnotations:
+  app: processor-api
 bases:
   - ../../base
 patchesStrategicMerge:
