--- a/src/Processor.Api/appsettings.Production.json
+++ b/src/Processor.Api/appsettings.Production.json
@@ -6,7 +6,7 @@
         }
     },
     "Services": {
-        "Uploader": "http://uploader-api-cluster-ip.evolution"
+        "Uploader": "http://uploader-api.uploader"
     },
     "ServiceName": "processor-api",
     "AllowedHosts": "*",
