--- a/deploy/k8s/processor/base/deployment.yaml
+++ b/deploy/k8s/processor/base/deployment.yaml
@@ -13,9 +13,17 @@ spec:
       labels:
         app: processor-api
     spec:
+      volumes:
+        - name: appsettings-volume
+          configMap:
+            name: appsettings
       containers:
       - name: processor-api
         image: rohitrustagi007/evo_processor:64
+        volumeMounts:
+          - name: appsettings-volume
+            mountPath: /app/appsettings.k8s.json
+            subPath: appsettings.k8s.json
         env: 
           - name: ASPNETCORE_ENVIRONMENT
             value: "Production"
