--- a/deploy/k8s/processor/base/appsettings.yaml
+++ b/deploy/k8s/processor/base/appsettings.yaml
@@ -1,20 +1,23 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: appsettings
-  namespace: processor
-data:
-  appsettings.k8s.json: |-
-    {
-      "Logging": {
-        "LogLevel": {
-          "Default": "Information",
-          "Microsoft": "Warning",
-          "Microsoft.Hosting.Lifetime": "Information"
-        }
-      },
-      "Services": {
-        "Uploader": "http://uploader-api.uploader"
-      },
-      "AllowedHosts": "*",
-    }
+# This is an alternate way to use configMaps
+
+
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: appsettings
+#   namespace: processor
+# data:
+#   appsettings.k8s.json: |-
+#     {
+#       "Logging": {
+#         "LogLevel": {
+#           "Default": "Information",
+#           "Microsoft": "Warning",
+#           "Microsoft.Hosting.Lifetime": "Information"
+#         }
+#       },
+#       "Services": {
+#         "Uploader": "http://uploader-api.uploader"
+#       },
+#       "AllowedHosts": "*",
+#     }
