--- a/deploy/k8s/processor/base/canary.yaml
+++ b/deploy/k8s/processor/base/canary.yaml
@@ -47,7 +47,7 @@ spec:
     maxWeight: 50
     # canary increment step
     # percentage (0-100)
-    stepWeight: 5
+    stepWeight: 10
     # Linkerd Prometheus checks
     metrics:
     - name: request-success-rate
@@ -75,4 +75,4 @@ spec:
         type: rollout
         url: http://flagger-loadtester.flagger-system/
         metadata:
-          cmd: "hey -z 2m -q 10 -c 2 http://processor-api-canary.processor:80/healthz"
+          cmd: "hey -z 30s -q 10 -c 2 http://processor-api-canary.processor:80/healthz"
