Side Car injection for PRocessor and Add PRocessor to call uplodaer on delay and status

--- a/deploy/k8s/processor/base/kustomization.yaml
+++ b/deploy/k8s/processor/base/kustomization.yaml
@@ -6,10 +6,10 @@ resources:
   - secrets.yaml
   - appsettings.yaml
   - deployment.yaml
-  - hpa.yaml
+  #- hpa.yaml
   - service.yaml
-  - gateway.yaml
-  - canary.yaml
+  #- gateway.yaml
+  #- canary.yaml
   #- service-monitor.yaml
 
 generatorOptions:
