--- a/deploy/k8s/processor/base/namespace.yaml
+++ b/deploy/k8s/processor/base/namespace.yaml
@@ -5,9 +5,12 @@ metadata:
   # **** Enable OSM at namespace level  
   labels:
     #openservicemesh.io/monitored-by: osm
-    #kuma.io/sidecar-injection: enabled
-    istio-injection: enabled
+    app: processor
+    kuma.io/sidecar-injection: enabled
+
   annotations:
-    istio-injection: enabled
-    #'openservicemesh.io/sidecar-injection': 'enabled'
-    #'openservicemesh.io/metrics': 'enabled'
+    kuma.io/mesh: mymesh
+    app: uploader
+    # istio-injection: enabled
+    # 'openservicemesh.io/sidecar-injection': 'enabled'
+    # 'openservicemesh.io/metrics': 'enabled'
