kuma policy try ratelimit

--- a/deploy/k8s/processor/base/service.yaml
+++ b/deploy/k8s/processor/base/service.yaml
@@ -11,6 +11,7 @@ spec:
     app: processor-api
   ports:
   - name: processor-api-port
+    appProtocol : http
     protocol: TCP
     port: 80
     targetPort: 80
